tests/libtracker-data/error/update-error-1.ontology
@prefix example: <http://example.com/> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix tracker: <http://www.tracker-project.org/ontologies/tracker#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .

example: a tracker:Namespace ;
	tracker:prefix "example" .

example:A a rdfs:Class ;
	rdfs:subClassOf rdfs:Resource .

rdf:value a rdf:Property ;
	rdfs:domain example:A ;
	rdfs:range xsd:string .

